--- a/formpart.ui
+++ b/formpart.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1058</width>
-    <height>780</height>
+    <width>1056</width>
+    <height>778</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -254,8 +254,8 @@
                 <property name="defaultDropAction">
                  <enum>Qt::CopyAction</enum>
                 </property>
-                <property name="selectionBehavior">
-                 <enum>QAbstractItemView::SelectRows</enum>
+                <property name="selectionMode">
+                 <enum>QAbstractItemView::SingleSelection</enum>
                 </property>
                </widget>
               </item>
@@ -286,8 +286,8 @@
            <layout class="QHBoxLayout" name="horizontalLayout_5">
             <item>
              <widget class="DbViewer" name="tableViewSrcMech">
-              <property name="selectionBehavior">
-               <enum>QAbstractItemView::SelectRows</enum>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::NoSelection</enum>
               </property>
              </widget>
             </item>
