--- a/formdoc.ui
+++ b/formdoc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1125</width>
-    <height>742</height>
+    <width>1123</width>
+    <height>740</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,78 +68,10 @@
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="7" column="0">
-          <widget class="QLabel" name="label_11">
-           <property name="text">
-            <string>Группы тех. устр.</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>Номер документа</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEditDoc"/>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Назв. документа</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="1">
-          <widget class="QComboBox" name="comboBoxVid">
-           <property name="editable">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <widget class="QLineEdit" name="lineEditNumBl"/>
-         </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_8">
-           <property name="text">
-            <string>Номер бланка</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>Дата принятия</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_9">
-           <property name="text">
-            <string>Номер наклейки</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="1">
-          <widget class="QLineEdit" name="lineEditNumNak"/>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_7">
-           <property name="text">
-            <string>Вид документа</string>
-           </property>
-          </widget>
-         </item>
          <item row="3" column="1">
           <widget class="DateEdit" name="dateEditDoc"/>
          </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEditNam"/>
-         </item>
-         <item row="7" column="1">
+         <item row="8" column="1">
           <widget class="QLineEdit" name="lineEditGtu"/>
          </item>
          <item row="2" column="0">
@@ -148,6 +80,9 @@
             <string>Ведомство</string>
            </property>
           </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="DateEdit" name="dateEditBeg"/>
          </item>
          <item row="2" column="1">
           <widget class="QComboBox" name="comboBoxVed">
@@ -163,8 +98,8 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="3">
-          <widget class="DateEdit" name="dateEditBeg"/>
+         <item row="1" column="3">
+          <widget class="DateEdit" name="dateEditEnd"/>
          </item>
          <item row="1" column="2">
           <widget class="QLabel" name="label_5">
@@ -173,8 +108,8 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="3">
-          <widget class="DateEdit" name="dateEditEnd"/>
+         <item row="2" column="3" rowspan="7">
+          <widget class="QPlainTextEdit" name="textEditDoc"/>
          </item>
          <item row="2" column="2">
           <widget class="QLabel" name="label_10">
@@ -182,9 +117,6 @@
             <string>Текст документа</string>
            </property>
           </widget>
-         </item>
-         <item row="2" column="3" rowspan="6">
-          <widget class="QPlainTextEdit" name="textEditDoc"/>
          </item>
          <item row="3" column="2">
           <widget class="QLabel" name="labelSert">
@@ -241,6 +173,81 @@
            </property>
            <property name="text">
             <string>Просмотр</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="0">
+          <widget class="QLabel" name="label_11">
+           <property name="text">
+            <string>Группы тех. устр.</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Номер документа</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="lineEditDoc"/>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Назв. документа</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QComboBox" name="comboBoxVid">
+           <property name="editable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QLineEdit" name="lineEditNumBl"/>
+         </item>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Номер бланка</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QLineEdit" name="lineEditNumNak"/>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Дата принятия</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Номер наклейки</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEditNam"/>
+         </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Вид документа</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="2">
+          <widget class="QPushButton" name="pushButtonDel">
+           <property name="text">
+            <string>Удалить</string>
            </property>
           </widget>
          </item>
