--- a/formdoc.ui
+++ b/formdoc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1025</width>
-    <height>738</height>
+    <width>1023</width>
+    <height>736</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,7 +64,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <layout class="QGridLayout" name="gridLayout">
@@ -264,7 +264,7 @@
             </size>
            </property>
            <property name="title">
-            <string>Марка и диаметр</string>
+            <string>Электроды: марка и диаметр</string>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
@@ -285,24 +285,6 @@
            </layout>
           </widget>
          </item>
-         <item>
-          <widget class="QGroupBox" name="groupBox">
-           <property name="maximumSize">
-            <size>
-             <width>200</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="title">
-            <string>Вид электродов</string>
-           </property>
-           <layout class="QVBoxLayout" name="verticalLayout">
-            <item>
-             <widget class="DbViewer" name="tableViewVid"/>
-            </item>
-           </layout>
-          </widget>
-         </item>
         </layout>
        </item>
        <item>
@@ -310,9 +292,21 @@
          <item>
           <widget class="QGroupBox" name="groupBoxWire">
            <property name="title">
-            <string>Проволока</string>
+            <string>Проволока: марка и диаметр</string>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_8">
+            <item>
+             <widget class="DbViewer" name="tableViewWireDiam"/>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="groupBox_5">
+           <property name="title">
+            <string>Марка</string>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_9">
             <item>
              <widget class="DbViewer" name="tableViewWire"/>
             </item>
@@ -390,7 +384,6 @@
   <tabstop>textEditDoc</tabstop>
   <tabstop>tableViewElDim</tabstop>
   <tabstop>tableViewEl</tabstop>
-  <tabstop>tableViewVid</tabstop>
   <tabstop>tableVieewGrade</tabstop>
  </tabstops>
  <resources>
