--- a/res.qrc
+++ b/res.qrc
@@ -26,5 +26,13 @@
         <file>images/ico.ico</file>
         <file>images/ok.png</file>
         <file>images/notok.png</file>
+        <file>fonts/DroidSans-Bold.ttf</file>
+        <file>fonts/DroidSans.ttf</file>
+        <file>fonts/DroidSansFallback.ttf</file>
+        <file>fonts/DroidSansMono.ttf</file>
+        <file>fonts/DroidSerif-Bold.ttf</file>
+        <file>fonts/DroidSerif-BoldItalic.ttf</file>
+        <file>fonts/DroidSerif-Italic.ttf</file>
+        <file>fonts/DroidSerif-Regular.ttf</file>
     </qresource>
 </RCC>
