--- a/formmark.ui
+++ b/formmark.ui
@@ -309,16 +309,10 @@
            </item>
            <item>
             <widget class="DbViewer" name="tableViewAmp">
-             <property name="minimumSize">
-              <size>
-               <width>650</width>
-               <height>0</height>
-              </size>
-             </property>
              <property name="maximumSize">
               <size>
-               <width>16777215</width>
-               <height>200</height>
+               <width>500</width>
+               <height>16777215</height>
               </size>
              </property>
             </widget>
@@ -328,21 +322,14 @@
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
-            <widget class="QLabel" name="label_23">
+            <widget class="QLabel" name="label_24">
              <property name="text">
-              <string>Характеристики плавления</string>
+              <string>Упаковка, штрих код</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="DbViewer" name="tableViewPlav">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>200</height>
-              </size>
-             </property>
-            </widget>
+            <widget class="DbViewer" name="tableViewPack"/>
            </item>
           </layout>
          </item>
@@ -375,6 +362,27 @@
            </item>
            <item>
             <widget class="DbViewer" name="tableViewMech"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_7">
+           <item>
+            <widget class="QLabel" name="label_23">
+             <property name="text">
+              <string>Характеристики плавления</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="DbViewer" name="tableViewPlav">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>200</height>
+              </size>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
