--- a/formpart.ui
+++ b/formpart.ui
@@ -392,6 +392,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="cmdLblSmall">
+           <property name="text">
+            <string>Сокр. этикетка</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="cmdPartSert">
            <property name="text">
             <string>Сертификат</string>
