--- a/res.qrc
+++ b/res.qrc
@@ -34,5 +34,12 @@
         <file>fonts/DroidSerif-BoldItalic.ttf</file>
         <file>fonts/DroidSerif-Italic.ttf</file>
         <file>fonts/DroidSerif-Regular.ttf</file>
+        <file>images/0.png</file>
+        <file>images/1.png</file>
+        <file>images/2.png</file>
+        <file>images/3.png</file>
+        <file>images/4.png</file>
+        <file>images/5.png</file>
+        <file>images/6.png</file>
     </qresource>
 </RCC>
